@@ -108,6 +108,7 @@ The following bugs are resolved with this release:
   [32483] ctype macros segfault in multithreaded programs with multiple libc.so
   [33234] Use TLS initial-exec model for __libc_tsd_CTYPE_* thread variables
   [33361] nss: Group merge does not react to ERANGE during merge
+  [33601] aarch64: Do not link conform tests with -Wl,-z,force-bti
 
 Version 2.39
 
